@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-08-26 Steve
+	* Added event weight functions for A-B3, A-B
+	* Default event weight now uses A-D7 lumi and pileup weights
+
 2012-08-21 Steve
 	* Fixing global variable LUMI_A_B14: 5381 -> 5835 [1/pb]
 		* I double checked the lumi calculation with lumi-calc
